micronfig_macros/tests/sources/wrong_start.stderr
error[E0308]: mismatched types
 --> tests/sources/wrong_start.rs:1:1
  |
1 | / micronfig::config! {
2 | |     GARASAUTO: i64,
3 | | }
  | | ^
  | | |
  | |_expected `Option<i64>`, found `Option<String>`
  |   expected due to this
  |
  = note: expected enum `Option<i64>`
             found enum `Option<String>`
  = note: this error originates in the macro `micronfig::config` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/sources/wrong_start.rs:1:1
  |
1 | / micronfig::config! {
2 | |     GARASAUTO: i64,
3 | | }
  | | ^- help: try using a conversion method: `.to_string()`
  | | |
  | |_expected `String`, found `i64`
  |   expected due to this
  |
  = note: this error originates in the macro `micronfig::config` (in Nightly builds, run with -Z macro-backtrace for more info)
