micronfig_macros/tests/sources/wrong_start.rs
micronfig::config! {
	GARASAUTO: i64,
}

fn main() {
	std::env::set_var("GARASAUTO", "-1");
	println!("{:#?}", GARASAUTO());
}
